<resources>
    <string name="app_name">KitaBisaMovie</string>
    <string name="category">Category</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_toolbar">Title Toolbar</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="reviews">Reviews</string>
    <string name="oops">Oops..</string>
    <string name="there_is_no_review_of_this_film">There is no review of this film</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="cinemaku">Cinemaku</string>
</resources>
